cmake_minimum_required(VERSION 3.10)

project(my_project)

enable_language(ASM_NASM)

option(ARCH_32 "Compile for 32-bit architecture" OFF)
option(ARCH_64 "Compile for 64-bit architecture" OFF)


if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
      set(CMAKE_C_FLAGS "-Wall -Wextra -Werror")
      set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
    endif()
    if(ARCH_32)
        set(CMAKE_C_FLAGS "-m32")
        set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> -f elf32 -o <OBJECT> <SOURCE>")
        add_executable(merge_32 main.c merge_opt.c merge.c merge_asm_32.asm merge_simd_32.asm)
    elseif(ARCH_64)
        set(CMAKE_C_FLAGS "-m64")
        set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> -f elf64 -o <OBJECT> <SOURCE>")
        add_executable(merge_64 main.c merge_opt.c merge.c merge_asm_64.asm merge_simd_64.asm)
    endif()
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
      set(CMAKE_C_FLAGS "/W4 /WX")
      set(CMAKE_CXX_FLAGS "/W4 /WX")
    endif()
    if(ARCH_32)
        set(CMAKE_C_FLAGS "-m32")
        set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> -f elf32 -o <OBJECT> <SOURCE>")
        add_executable(merge_32 main_win.c merge_opt.c merge.c merge_asm_32.asm merge_simd_32.asm)
    elseif(ARCH_64)
        set(CMAKE_C_FLAGS "-m64")
        set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> -f elf64 -o <OBJECT> <SOURCE>")
        add_executable(merge_64 main_win.c merge_opt.c merge.c merge_asm_64.asm merge_simd_64.asm)
    endif()
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
      set(CMAKE_C_FLAGS "-Wall -Wextra -Werror")
      set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
    endif()
    if(ARCH_32)
        set(CMAKE_C_FLAGS "-m32")
        set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> -f elf32 -o <OBJECT> <SOURCE>")
        add_executable(merge_32 main.c merge_opt.c merge.c merge_asm_32.asm merge_simd_32.asm)
    elseif(ARCH_64)
        set(CMAKE_C_FLAGS "-m64")
        set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> -f elf64 -o <OBJECT> <SOURCE>")
        add_executable(merge_64 main.c merge_opt.c merge.c merge_asm_64.asm merge_simd_64.asm)
    endif()
endif()

